Add API methods
From GetMe to CreateSpace
Add Invitations and Users

--- a/CircleSo.CLI/appsettings.json
+++ b/CircleSo.CLI/appsettings.json
@@ -1,5 +1,14 @@
 {
   "CircleNet": {
-    "host":  "https://app.circle.so"
+    "host": "https://app.circle.so",  
+    "token": "your_token"
+  },
+  "Ids": {
+    "Community_1": 0,
+    "Community_2": 0,
+    "SpaceGroup_11": 0,
+    "SpaceGroup_21": 0,
+    "Space_11a": 0,
+    "User_1a": 0
   }
 }
