--- a/CircleSo/CircleSo.csproj
+++ b/CircleSo/CircleSo.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>CircleSharp</PackageId>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <Authors>GreatFriends</Authors>
     <Product>CircleSharp</Product>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
@@ -14,13 +13,17 @@
     <PackageIcon>circle-sharp-logo.png</PackageIcon>
     <RepositoryUrl>https://github.com/greatfriends/CircleSharp</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
+    <RootNamespace>CircleSharp</RootNamespace>
+    <AssemblyName>CircleSharp</AssemblyName>
+    <FileVersion>0.1.1</FileVersion>
+    <AssemblyVersion>0.1.1</AssemblyVersion>
+    <PackageVersion>0.1.1</PackageVersion>
+    <InformationVersion>0.1.1</InformationVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="106.11.7" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="images\circle-sharp-logo.png">
       <Pack>True</Pack>
@@ -31,5 +34,4 @@
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
-
 </Project>
